add a pair of buttons changing livedata
Two buttons were added to MainActivity, onClick each sends a specified
value to the viewmodel which sets it's MutableLiveData to the value.
Since MaiaActivity observes the LiveData, it updates it's views with the
new value without any additional code.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ArchReference</string>
+    <string name="button_sunday_title">Sunday</string>
+    <string name="button_monday_title">Monday</string>
 </resources>
