use the room database and MediatorLiveData<>
Added UI allowing to enter strings and insert them to database, via
viewmodel and then repository. MediatorLiveData is used to concatenate
all inserted items and offer it as a single LiveData<String> to be
observed by the activity. Database is currently allowed to run on the UI
thread.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">ArchReference</string>
-    <string name="button_sunday_title">Sunday</string>
-    <string name="button_monday_title">Monday</string>
+    <string name="button_sunday_title">commit</string>
+    <string name="text_input_hint">Type new string item</string>
 </resources>
